--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,3 +21,14 @@ dependencies:
 dev_dependencies:
   hop: '>=0.30.0 <0.31.0'
   unittest: any
+  dynamic_type_inference:
+    path: ../../../dynamic_type_inference
+transformers:
+- dynamic_type_inference:
+    instrumentationMode: WEB_TYPE_INFERENCE
+    entries: []
+    staticEntry: "example/web_gl_cubes/web_gl_cubes.dart"
+    package: "three"
+- $dart2js:
+    commandLineOptions: [--output-type=dart]
+    $exclude: ["bin", "example", "lib", "test", "tool", "web"]
